examples/fail/path_2_frag_0_pre_parent.xyz
8

C	-0.01782 1.46436 0.01009
C	0.00209 0.00951 0.00201
H	0.7544281932960198 0.10371875881964147 -0.7798592951481802
H	0.7389351443091935 0.48855921620782466 -0.6351257708227149
H	-0.39980438757549397 0.4115835458590141 0.9267445367810405
H	0.29383379347784355 1.0162441274803984 -0.2626967361274673
H	1.0482897700237557 -0.18673970397927017 0.23305973702309912
H	-0.5001986782396826 -0.23434654049461257 -0.9396717412189651
